--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(107, 204, 107);
+    background-color: rgb(204, 107, 107);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     
@@ -8,6 +8,7 @@ body {
 h1 {
     text-align: center;
     color: black;
+    font-size: 50px;
     
 }
 
@@ -34,3 +35,12 @@ hr {
     border-style: inset;
     border-width: 5px;
   }
+
+button {
+    background-color: rgb(7, 7, 7);
+    color: rgb(255, 255, 255);
+    border: 5px rgb(205, 70, 70);
+    padding: 16px 32px;
+    transition-duration: 0.6s;
+    font-size: 16px;
+}
